# serde-ignored-fields

./: CHANGELOG  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: deserialize.rs  key.rs  lib.rs  preserve_ignored_fields.rs  serialize.rs  value.rs
src/features/: mod.rs  schemars.rs  serde_json.rs  serde_yaml.rs  serde_yml.rs  toml.rs
tests/: deserialize.rs  enums.rs  serde_json.rs  serde_yaml.rs  serde_yml.rs  serialize.rs  toml.rs
