[package]
name = "serde-ignored-fields"
version = "0.1.0"
edition = "2021"

[features]
value = ["dep:indexmap"]

serde_json = ["dep:serde_json"]
serde_yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]

[dependencies]
indexmap = { version = "2.2.6", optional = true }
serde = "1.0.203"
serde_json = { version = "1.0.120", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.14", optional = true }

[dev-dependencies]
serde-ignored-fields = { path = ".", features = ["value", "serde_json", "serde_yaml", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
assert2 = "0.3.14"
